--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ pybcj==1.0.1
 pycparser==2.21
 pycryptodome==3.16.0
 pycryptodomex==3.15.0
-pymegatools==0.3.3
+pymegatools
 pyping==0.0.6
 pyppmd==1.0.0
 Pyrogram==2.0.62
